added test for recognizing unresourceful urls

--- a/spec/locales/routes.yml
+++ b/spec/locales/routes.yml
@@ -7,6 +7,7 @@ es:
     posts: puestos
     join: unirse
     all-the-posts: "todos-los-puestos"
+    bypass_action_controller: derivacion_controlador_de_accion
 
 fr:
   routes:
