CGI.escaped the translation of the paths so we can use the schweet utf-8 characters

--- a/spec/locales/routes.yml
+++ b/spec/locales/routes.yml
@@ -5,6 +5,7 @@ es:
     events: eventos
     users: usuarios
     posts: puestos
+    cafe: café
     join: unirse
     all-the-posts: "todos-los-puestos"
     bypass_action_controller: derivacion_controlador_de_accion
