Fix bug in url generation within a request
Url generation bug happens in a request when params[:locale] is set and you want to generate a url with a different locale
Major refactoring.

--- a/spec/locales/routes.yml
+++ b/spec/locales/routes.yml
@@ -9,6 +9,7 @@ es:
     join: unirse
     all-the-posts: "todos-los-puestos"
     bypass_action_controller: derivacion_controlador_de_accion
+    test: prueba
 
 fr:
   routes:
@@ -18,3 +19,4 @@ fr:
     users: utilisateurs
     posts: messages
     comments: commentaires
+    test: test
