Add support for fully qualified locales

--- a/spec/locales/routes.yml
+++ b/spec/locales/routes.yml
@@ -20,3 +20,13 @@ fr:
     posts: messages
     comments: commentaires
     test: test
+
+fr-CA:
+  routes:
+    new: nouvelles
+    edit: modifier
+    events: evenements
+    users: utilisateurs
+    posts: messages
+    comments: commentaires
+    test: test
