fixed bug in duplicate route for the test suite

--- a/spec/locales/routes.yml
+++ b/spec/locales/routes.yml
@@ -26,7 +26,7 @@ fr-CA:
     new: nouvelles
     edit: modifier
     events: evenements
-    users: utilisateurs
+    users: canada_utilisateurs
     posts: messages
     comments: commentaires
     test: canada_test
