WIP all tests pass

--- a/spec/locales/routes.yml
+++ b/spec/locales/routes.yml
@@ -10,6 +10,7 @@ es:
     all-the-posts: "todos-los-puestos"
     bypass_action_controller: derivacion_controlador_de_accion
     test: prueba
+    testing_url_for: "url-para-probar"
 
 fr:
   routes:
