added tests that checks for * routes and fixed the regexp check to not be greedy because it was messing up on paths such as (:locale)/about(/*anything)

--- a/spec/locales/routes.yml
+++ b/spec/locales/routes.yml
@@ -11,7 +11,7 @@ es:
     bypass_action_controller: derivacion_controlador_de_accion
     test: prueba
     testing_url_for: "url-para-probar"
-
+    about: sobre
 fr:
   routes:
     new: nouvelles
